# filament

./: README.md  build.sh
android/gltfio-android/src/main/cpp/: Manipulator.cpp
android/samples/sample-gltf-viewer/src/main/java/com/google/android/filament/gltf/: GestureDetector.kt  MainActivity.kt
android/utils-android/: CMakeLists.txt
android/utils-android/src/main/cpp/: KtxLoader.cpp  Manipulator.cpp
android/utils-android/src/main/java/com/google/android/filament/utils/: GestureDetector.kt  KtxLoader.java  Scalar.kt
filament/src/: Renderer.cpp
filament/src/details/: Renderer.h
filament/src/fg/: FrameGraph.h
filament/src/fg/fg/: RenderTargetResource.h
